[project]
name = "comfyui-ollama-describer"
description = "This is an extension for ComfyUI that makes it possible to use some LLM models provided by Ollama, such as Gemma, Llava (multimodal), Llama2, Llama3 or Mistral. Speaking specifically of the LLaVa - Large Language and Vision Assistant model, although trained on a relatively small dataset, it demonstrates exceptional capabilities in understanding images and answering questions about them. This model presents similar behaviors to multimodal models such as GPT-4, even when presented with invisible images and instructions."
version = "1.0.0"
license = "LICENSE"
dependencies = ["ollama"]

[project.urls]
Repository = "https://github.com/alisson-anjos/ComfyUI-Ollama-Describer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alisson-anjos"
DisplayName = "ComfyUI-Ollama-Describer"
Icon = ""
